# databricks-dq-framework

./: .gitattributes  .gitignore  DOCUMENTATION.docx  DOCUMENTATION.md  LICENSE  Makefile  README.md  app.yaml  azure-pipelines.yml  databricks.yml  pyproject.toml
examples/: dq_framework_demo.py
notebooks/: dq_alerts.py  dq_lineage.py  dq_run.py  dq_setup.py
resources/jobs/: dq_pipeline_job.yml
src/dq_framework/: __init__.py  cli.py  exceptions.py
src/dq_framework/api/: __init__.py  app.py  deps.py  models.py
src/dq_framework/core/: __init__.py  _explain.py  config.py  metrics.py  results.py  runner.py  scoring.py
src/dq_framework/infra/: __init__.py  scheduling.py  setup.py  views.py
src/dq_framework/monitoring/: __init__.py  alerts.py  lineage.py  notifications.py  sla.py
src/dq_framework/quality/: __init__.py  quarantine.py  rules.py
tests/: conftest.py  test_alerts.py  test_api.py  test_config.py  test_results.py  test_runner.py
