[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "dq-framework"
version         = "1.1.0"
description     = "Reusable, config-driven Databricks Data Quality framework with drift alerting"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "Vivek Rawat", email = "rawatvivek239@gmail.com" }]
keywords        = ["databricks", "data-quality", "dqx", "spark", "delta", "data-engineering"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
]

# Core dependencies — pinned to the versions verified in the target Databricks runtime.
dependencies = [
    "databricks-labs-dqx==0.13.0",
    "databricks-sdk>=0.73,<1.0",
    "pyspark>=3.5,<4.0",
    "delta-spark>=3.0,<4.0",
]

[project.optional-dependencies]
# AI-assisted rule generation
llm = [
    "databricks-labs-dqx[llm]==0.13.0",
]
# Slack / Teams webhook notifications (DQNotifier)
notifications = [
    "requests>=2.28",
]
# CLI (dq-framework command)
cli = [
    "typer>=0.12",
]
# All optional features
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
]
all = [
    "databricks-labs-dqx[llm]==0.13.0",
    "requests>=2.28",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
]
# Dev tools — for running tests and linting locally
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pyspark>=3.5,<4.0",
    "delta-spark>=3.0,<4.0",
    "ruff>=0.5",
    "typer>=0.12",
]

[project.scripts]
dq-framework = "dq_framework.cli:main"

[project.urls]
Homepage   = "https://github.com/your-org/dq-framework"
Repository = "https://github.com/your-org/dq-framework"
Issues     = "https://github.com/your-org/dq-framework/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
dq_framework = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra"

[tool.ruff]
line-length    = 120
target-version = "py310"
src            = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is governed by the formatter, not the linter
